# syllabify

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: python-publish.yml  release-please.yml
syllabify/: __init__.py  cli.py  cmu_parser.py  constants.py  core.py  phonemes.py  syllables.py
syllabify/CMU_dictionary/: cmudict.0.7a
