[project]
name = "syllabify"
version = "0.5.0"
description = "Automatically convert plain text into phonemes (US English pronunciation) and syllabify"
authors = [
  { name = "Fong-Chun Tsai", email = "eoleedimin@gmail.com" },
  { name = "Andrew Caines", email = "cainesap@gmail.com" },
  { name = "Anthony Evans" },
]
license = "MIT"
readme = "README.md"
keywords = [
  "phonetics",
  "syllabification",
  "linguistics",
  "cmu",
  "pronunciation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
  "cmudict>=1.1.3,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/eoleedi/syllabify"
Repository = "https://github.com/eoleedi/syllabify"

[project.scripts]
syllabify = "syllabify.cli:main"

[dependency-groups]
dev = [
  "pre-commit>=4.6.0,<5.0.0",
  "black>=26.5.1,<27.0.0",
  "flake8>=7.3.0,<8.0.0",
  "pylint>=4.0.5,<5.0.0",
]

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["syllabify"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
